src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Account_matched__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account matched</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Claims (Account matched)</relationshipLabel>
        <relationshipName>MatchedClaims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AddressLabel__c</fullName>
        <description>Address Label used for mailing</description>
        <label>Address Label</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admin503B_Allowed_Amount__c</fullName>
        <label>Admin503B Allowed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin503B_CUD__c</fullName>
        <formula>IF( Admin503B_Scheduled_as_Contingent__c , &apos;C&apos;, NULL) +
IF( Admin503B_Scheduled_As_Unliquidated__c , &apos;U&apos;, NULL) +
IF( Admin503B_Scheduled_As_Disputed__c , &apos;D&apos;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin503B CUD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin503B_Claim_Status__c</fullName>
        <label>Admin503B Claim Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin503B_Claimed_Amount__c</fullName>
        <label>Admin503B Claimed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin503B_Scheduled_Amount__c</fullName>
        <label>Admin503B Scheduled Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin503B_Scheduled_As_Disputed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin503B Scheduled As Disputed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin503B_Scheduled_As_Unliquidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin503B Scheduled As Unliquidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin503B_Scheduled_as_Contingent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin503B Scheduled as Contingent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_Allowed_Amount__c</fullName>
        <label>Admin Allowed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin_CUD__c</fullName>
        <formula>IF( Admin503B_Scheduled_as_Contingent__c , &apos;C&apos;, NULL) +
IF( Admin503B_Scheduled_As_Unliquidated__c , &apos;U&apos;, NULL) +
IF( Admin503B_Scheduled_As_Disputed__c , &apos;D&apos;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin CUD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Claim_Status__c</fullName>
        <label>Admin Claim Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Claimed_Amount__c</fullName>
        <label>Admin Claimed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin_Scheduled_Amount__c</fullName>
        <label>Admin Scheduled Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin_Scheduled_as_Contingent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Scheduled as Contingent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_Scheduled_as_Disputed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Scheduled as Disputed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_Scheduled_as_Unliquidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Scheduled as Unliquidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allowed_Total__c</fullName>
        <formula>Admin503B_Allowed_Amount__c +  Admin_Allowed_Amount__c +  Priority_Allowed_Amount__c +  Secured_Allowed_Amount__c + Unsecured_Allowed_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allowed Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_Pic__c</fullName>
        <label>Bankruptcy Pic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abeinsa Holdings (related to Abengoa)</fullName>
                </value>
                <value>
                    <fullName>Abengoa Bioenergy US Holdings</fullName>
                </value>
                <value>
                    <fullName>Adeptus Health</fullName>
                </value>
                <value>
                    <fullName>Associated Wholesalers Inc (AWI)</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Beaulieu Group</fullName>
                </value>
                <value>
                    <fullName>CIBER Inc</fullName>
                </value>
                <value>
                    <fullName>Circuit City</fullName>
                </value>
                <value>
                    <fullName>Cornerstone Apparel</fullName>
                </value>
                <value>
                    <fullName>CS Mining</fullName>
                </value>
                <value>
                    <fullName>Fisker Automotive</fullName>
                </value>
                <value>
                    <fullName>Fresh &amp; Easy</fullName>
                </value>
                <value>
                    <fullName>Furniture Brands International</fullName>
                </value>
                <value>
                    <fullName>GST AutoLeather</fullName>
                </value>
                <value>
                    <fullName>Health Diagnostic Laboratory</fullName>
                </value>
                <value>
                    <fullName>iHeart</fullName>
                </value>
                <value>
                    <fullName>Knight Energy</fullName>
                </value>
                <value>
                    <fullName>M&amp;G USA Corp</fullName>
                </value>
                <value>
                    <fullName>Nortel</fullName>
                </value>
                <value>
                    <fullName>Payless</fullName>
                </value>
                <value>
                    <fullName>Rentech</fullName>
                </value>
                <value>
                    <fullName>Republic Airways</fullName>
                </value>
                <value>
                    <fullName>THQ</fullName>
                </value>
                <value>
                    <fullName>Toys R US</fullName>
                </value>
                <value>
                    <fullName>Westinghouse Electric (Toshiba)</fullName>
                </value>
                <value>
                    <fullName>Woodbridge Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bankruptcy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field will link the claim to a Bankruptcy on the account object</description>
        <label>Bankruptcy</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Bankruptcy</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Claims</relationshipLabel>
        <relationshipName>Claims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClaimSummary__c</fullName>
        <label>ClaimSummary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Claim_Agent_Name__c</fullName>
        <label>Claim Agent Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Claim_Amount__c</fullName>
        <description>Claim Amount</description>
        <inlineHelpText>Amount of Cliam</inlineHelpText>
        <label>Claim Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Claim_ID__c</fullName>
        <label>Claim ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claim_Notes__c</fullName>
        <label>Claim Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Claim_Type__c</fullName>
        <description>Claim Type</description>
        <inlineHelpText>Type of claim (i.e. Unsecured, Secured)</inlineHelpText>
        <label>Claim Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Claimed_Total__c</fullName>
        <formula>Admin503B_Claimed_Amount__c + Admin_Claimed_Amount__c + Priority_Claimed_Amount__c + Secured_Claimed_Amount__c + Unsecured_Claimed_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claimed Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Company_Name__c</fullName>
        <label>Contact Company Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Creditor_Bankruptcy_Debtor__c</fullName>
        <formula>UPPER(Company) + &apos;|&apos; +  Bankruptcy__c + &apos;|&apos; +  Debtor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creditor Bankruptcy Debtor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debotor__c</fullName>
        <label>Debtor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Bankruptcy_Pic__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Geoffrey Holdings, LLC</fullName>
                </value>
                <value>
                    <fullName>Geoffrey International, LLC</fullName>
                </value>
                <value>
                    <fullName>Geoffrey, LLC</fullName>
                </value>
                <value>
                    <fullName>Giraffe Holdings, LLC</fullName>
                </value>
                <value>
                    <fullName>Giraffe Junior Holdings, LLC</fullName>
                </value>
                <value>
                    <fullName>MAP 2005 Real Estate, LLC</fullName>
                </value>
                <value>
                    <fullName>Toys &quot;R&quot; Us (Canada) Ltd./Toys &quot;R&quot; Us (Canada) Ltee</fullName>
                </value>
                <value>
                    <fullName>Toys &quot;R&quot; Us, Inc.</fullName>
                </value>
                <value>
                    <fullName>Toys “R” Us - Delaware Inc.</fullName>
                </value>
                <value>
                    <fullName>Toys “R” Us - Value, Inc.</fullName>
                </value>
                <value>
                    <fullName>Toys “R” Us Europe, LLC</fullName>
                </value>
                <value>
                    <fullName>Toys “R” Us Property Company II, LLC</fullName>
                </value>
                <value>
                    <fullName>Toys Acquisition, LLC</fullName>
                </value>
                <value>
                    <fullName>TRU - SVC, Inc.</fullName>
                </value>
                <value>
                    <fullName>TRU Asia, LLC</fullName>
                </value>
                <value>
                    <fullName>TRU Guam, LLC</fullName>
                </value>
                <value>
                    <fullName>TRU Mobility, LLC</fullName>
                </value>
                <value>
                    <fullName>TRU of Puerto Rico, Inc.</fullName>
                </value>
                <value>
                    <fullName>TRU Taj (Europe) Holdings, LLC</fullName>
                </value>
                <value>
                    <fullName>TRU Taj Finance, Inc.</fullName>
                </value>
                <value>
                    <fullName>TRU Taj Holdings 1, LLC</fullName>
                </value>
                <value>
                    <fullName>TRU Taj Holdings 2 Limited</fullName>
                </value>
                <value>
                    <fullName>TRU Taj Holdings 3, LLC</fullName>
                </value>
                <value>
                    <fullName>TRU Taj LLC</fullName>
                </value>
                <value>
                    <fullName>Wayne Real Estate Parent Company, LLC</fullName>
                </value>
                <value>
                    <fullName>Abener Teyma Mojave General Partnership</fullName>
                </value>
                <value>
                    <fullName>Abeinsa Holding Inc.</fullName>
                </value>
                <value>
                    <fullName>Abener North America Construction, LP</fullName>
                </value>
                <value>
                    <fullName>Abeinsa Abener Teyma General Partnership</fullName>
                </value>
                <value>
                    <fullName>Abeinsa EPC, LLC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Debtor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field will populate the debtor account name.</description>
        <label>Debtor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Debtors</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Claims (Debtor Name)</relationshipLabel>
        <relationshipName>Claims_relation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disqualify_Reason__c</fullName>
        <label>Disqualify Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Match</fullName>
                </value>
                <value>
                    <fullName>Lead Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Contact_Name__c</fullName>
        <label>Existing Contact Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Claim_Number__c</fullName>
        <externalId>true</externalId>
        <label>External Claim Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_Date__c</fullName>
        <description>Filing Date</description>
        <label>Filing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Matching_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Matching Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority_Allowed_Amount__c</fullName>
        <label>Priority Allowed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priority_CUD__c</fullName>
        <formula>IF( Priority_Scheduled_as_Contigent__c , &apos;C&apos;, NULL) +
IF( Priority_Scheduled_as_Unliquidated__c , &apos;U&apos;, NULL) +
IF( Priority_Scheduled_as_Disputed__c , &apos;D&apos;, NULL)</formula>
        <label>Priority CUD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Claim_Status__c</fullName>
        <label>Priority Claim Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Claimed_Amount__c</fullName>
        <label>Priority Claimed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priority_Scheduled_Amount__c</fullName>
        <label>Priority Scheduled Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Priority_Scheduled_as_Contigent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority Scheduled as Contigent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority_Scheduled_as_Disputed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority Scheduled as Disputed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority_Scheduled_as_Unliquidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority Scheduled as Unliquidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed_for_Account_Dupe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed for Account Dupe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed_for_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed for Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_of_Claim_PDF_URL__c</fullName>
        <label>Proof of Claim PDF URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Proof_of_Claim_URL__c</fullName>
        <label>Proof of Claim URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Scheduled_Total__c</fullName>
        <formula>Admin503B_Scheduled_Amount__c + Admin_Scheduled_Amount__c + Priority_Scheduled_Amount__c + Secured_Scheduled_Amount__c + Unsecured_Scheduled_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Secured_Allowed_Amount__c</fullName>
        <label>Secured Allowed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Secured_CUD__c</fullName>
        <formula>IF( Secured_Scheduled_as_Contingent__c, &apos;C&apos;, NULL) +
IF( Secured_Scheduled_As_Unliquidated__c, &apos;U&apos;, NULL) +
IF( Secured_Schuduled_as_Disputed__c, &apos;D&apos;, NULL)</formula>
        <label>Secured CUD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secured_Claim_Status__c</fullName>
        <label>Secured Claim Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secured_Claimed_Amount__c</fullName>
        <label>Secured Claimed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Secured_Scheduled_Amount__c</fullName>
        <label>Secured Scheduled Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Secured_Scheduled_As_Unliquidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secured Scheduled As Unliquidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secured_Scheduled_as_Contingent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secured Scheduled as Contingent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secured_Schuduled_as_Disputed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secured Schuduled as Disputed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Bankrupt-specific Excluded Creditors</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Govt Agency</fullName>
                </value>
                <value>
                    <fullName>Inter-company</fullName>
                </value>
                <value>
                    <fullName>sold to other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnSecured_CUD__c</fullName>
        <formula>IF( Unsecured_Scheduled_As_Contingent__c, &apos;C&apos;, NULL) +
IF( Unsecured_Scheduled_as_Unliquidated__c, &apos;U&apos;, NULL) +
IF( Unsecured_Scheduled_as_Disputed__c, &apos;D&apos;, NULL)</formula>
        <label>UnSecured CUD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unsecured_Allowed_Amount__c</fullName>
        <label>Unsecured Allowed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unsecured_Claim_Status__c</fullName>
        <label>Unsecured Claim Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unsecured_Claimed_Amount__c</fullName>
        <label>Unsecured Claimed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unsecured_Scheduled_Amount__c</fullName>
        <label>Unsecured Scheduled Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unsecured_Scheduled_As_Contingent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsecured Scheduled As Contingent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unsecured_Scheduled_as_Disputed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsecured Scheduled as Disputed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unsecured_Scheduled_as_Unliquidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsecured Scheduled as Unliquidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>printsf__PrintSF_Last_Address_Fail_Date__c</fullName>
        <description>The last date a User ran a PrintSF Mail List and clicked to post address failures which included this Lead</description>
        <inlineHelpText>The last date a User ran a PrintSF Mail List and clicked to post address failures which included this Lead</inlineHelpText>
        <label>PrintSF Last Address Fail Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>printsf__PrintSF_Last_Address_Fail_Error__c</fullName>
        <description>The USPS address failure error returned via last PrintSF address validation attempt against USPS systems</description>
        <inlineHelpText>The USPS address failure error returned via last PrintSF address validation attempt against USPS systems</inlineHelpText>
        <label>PrintSF Last Address Fail Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>printsf__PrintSF_Last_Mailer_Status_Date__c</fullName>
        <description>Date of the last status update to the most recent Mailer History related to this Lead</description>
        <inlineHelpText>Date of the last status update to the most recent Mailer History related to this Lead</inlineHelpText>
        <label>PrintSF Last Mailer Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>printsf__PrintSF_Last_Mailer_Status__c</fullName>
        <description>The last delivery status updated from the most recent Mailer History related to this Lead. Values may include Cancelled, Pending, Delivered, Returned and Not Tracked</description>
        <inlineHelpText>The last delivery status updated from the most recent Mailer History related to this Lead. Values may include Cancelled, Pending, Delivered, Returned and Not Tracked</inlineHelpText>
        <label>PrintSF Last Mailer Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>printsf__PrintSF_Last_Move_Forward_Date__c</fullName>
        <description>The last date a Mailer History related to this Lead had a NCOA Result of Forwarded</description>
        <inlineHelpText>The last date a Mailer History related to this Lead had a NCOA Result of Forwarded</inlineHelpText>
        <label>PrintSF Last Move Forward Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>printsf__PrintSF_Last_Return_Mail_Date__c</fullName>
        <description>The last date a Mailer History related to this Lead had a delivery status updated as Returned</description>
        <inlineHelpText>The last date a Mailer History related to this Lead had a delivery status updated as Returned</inlineHelpText>
        <label>PrintSF Last Return Mail Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>printsf__PrintSF_Last_Template_ID__c</fullName>
        <description>The PrintSF Template ID (a number) from the most recent Mailer History related to this Lead.  Typically used to trigger follow on Salesforce workflows or emails, or next steps in Marketing Automation platforms.</description>
        <inlineHelpText>The PrintSF Template ID (a number) from the most recent Mailer History related to this Lead.  Typically used to trigger follow on Salesforce workflows or emails, or next steps in Marketing Automation platforms.</inlineHelpText>
        <label>PrintSF Last Template ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>printsf__PrintSF_Last_Template_Name__c</fullName>
        <description>The PrintSF Template Name from the most recent Mailer History related to this Lead.</description>
        <inlineHelpText>The PrintSF Template Name from the most recent Mailer History related to this Lead.</inlineHelpText>
        <label>PrintSF Last Template Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Claim_Agent_Name__c</columns>
        <columns>Claim_Amount__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Bankruptcy__c</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Claims</label>
    </listViews>
    <listViews>
        <fullName>Qualified_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bankruptcy__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Qualified Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Claim_Amount__c</columns>
        <columns>Claim_Type__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Claims</label>
    </listViews>
    <listViews>
        <fullName>ToysRUsAdmin</fullName>
        <columns>FULL_NAME</columns>
        <columns>Bankruptcy_Pic__c</columns>
        <columns>Debotor__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>ToysRUsAdmin</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>